# Papersonde

./: Cargo.toml  README.md
.cargo/: stm32f1.toml  stm32l4.toml
src/: main.rs  sonde.rs
src/modules/: mod.rs  sonde.rs
