[workspace]

[package]
name = "papersonde"
version = "0.1.0"
edition = "2024"

[features]
stm32f1xx = ["embassy-stm32/stm32f100c8"]
stm32l4xx = ["embassy-stm32/stm32l4r5zi", "embassy-stm32/exti", "embassy-stm32/chrono", "embassy-embedded-hal", "embassy-net-adin1110", "embassy-net", "embedded-io-async", "embedded-io"]

[dependencies]
embassy-stm32 = { version = "0.2.0", features = [ "unstable-pac", "memory-x" ] }

# Optional for l4xx
embassy-embedded-hal = { optional =  true, version = "0.3.0"}
embassy-net-adin1110 = { optional =  true, version = "0.3.0" }
embassy-net = { optional =  true, version = "0.7.0", features = ["defmt",  "udp", "tcp", "dhcpv4", "medium-ethernet"] }
embedded-io-async = { optional =  true, version = "0.6.1", features = ["defmt-03"] }
embedded-io = { optional =  true, version = "0.6.0", features = ["defmt-03"] }

# Common
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-usb = { version = "0.4.0", features = ["defmt"] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy"}

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2